syntax = "proto3";

package user;


// ClientDisconnect 客户端断开连接
message ClientDisconnect {
    uint64 client_id = 1;  // 客户端 ID 
}

// PlayerLogin 玩家登录消息
message PlayerLogin {
    uint64 player_id = 1; // 玩家 ID 
}

